--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
-  - {name: 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-420.7KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 未知国家-2.94MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇬🇧 英国-825.9KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 乌克兰-1.08MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-549.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-451.3KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.14MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-259.9KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇯🇵 日本-4.26MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.13MB/s(Youtube:不良林), server: 213.183.59.211, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇩🇪 德国-1.36MB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: 65.49.210.47, port: 10895, type: vmess, uuid: 51a66487-e65e-47cb-8c6d-6054bb29a5f7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇭 瑞士-2.82MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 乌克兰-3.05MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.7KB/s(Youtube:不良林)
-      - 未知国家-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 乌克兰-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-451.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-259.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
+      - 乌克兰-3.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
